--- a/themes/scribble/layout/_partial/footer.ejs
+++ b/themes/scribble/layout/_partial/footer.ejs
@@ -1,4 +1,7 @@
 <footer>
-  <span class='muted'>&copy; <%= config.author %>. All Rights Reserved.<a href="http://www.miitbeian.gov.cn/">赣ICP备17007885号</a></span><br>
+  <span class='muted'>&copy; StackFing . All Rights Reserved.<br><a style="font-size:10px;" href="http://www.miitbeian.gov.cn/">赣ICP备17007885号</a></span><br>
   <script src="https://s11.cnzz.com/z_stat.php?id=1261178793&web_id=1261178793" language="JavaScript"></script>
+  <script>
+    hljs.initHighlightingOnLoad();
+  </script>
 </footer>
