--- a/themes/scribble/layout/_partial/head.ejs
+++ b/themes/scribble/layout/_partial/head.ejs
@@ -1,5 +1,7 @@
 <link href='/images/logo.png' rel='shortcut icon'>
 <link href='<%= theme.rss %>' rel='alternate' type='application/rss+xml'>
+<link rel="stylesheet" href="//cdn.bootcss.com/highlight.js/9.2.0/styles/github.min.css">
+<script src="//cdn.bootcss.com/highlight.js/9.2.0/highlight.min.js"></script>
 <%- css(['css/style', 'css/highlight', 'css/responsive']) %>
 <%- js(['js/jquery', 'js/basics']) %>
 <meta content='width=device-width, initial-scale=1.0, user-scalable=no' name='viewport'>
